# slynx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
crates/hir/: Cargo.toml
crates/hir/docs/: HIRGeneration.md
crates/hir/src/: components.rs  declarations.rs  error.rs  expression.rs  file.rs  id.rs  lib.rs  module_loader.rs  names.rs  objects.rs  queries.rs  statements.rs  styles.rs
crates/hir/src/builders/: component.rs  expression.rs  function.rs  mod.rs  styles.rs  work_channel.rs
crates/hir/src/builders/attributes/: mod.rs
crates/hir/src/context/: declarations.rs  lang_items.rs  mod.rs  scopes.rs  symbols.rs  types.rs
crates/hir/src/context/symbols/: registry.rs
crates/hir/src/context/types/: components.rs  mod.rs  structs.rs
crates/hir/src/file/: declarations.rs  mod.rs
crates/hir/src/helpers/: declarations.rs  expressions.rs  mod.rs  names.rs  types.rs
crates/hir/src/helpers/views/: component.rs  declarations.rs  expressions.rs  functions.rs  mod.rs  strukt.rs  styles.rs  types.rs
crates/hir/src/implementation/: components.rs  declarations.rs  expression.rs  names.rs  statements.rs
crates/hir/src/model/: declarations.rs  expression.rs  mod.rs  statements.rs  types.rs
crates/hir/src/modules/: declarations.rs  mod.rs  scopes.rs  symbols.rs  types.rs
docs/: arrays-vectors-slices.md  attributes.md  externs.md  first-slynx-file.md  grammar.md  imports.md  landing-content-inventory.md  language-surface.md  name-convention.md  reactivity-model.md  static-variables.md  stylesheets.md
examples/: arrays.syx  externs.syx  objMethod.syx  objMethodStatic.syx  objMethods.syx  tupleNestedObject.syx  tupleTwoObjects.syx
frontend/: Cargo.toml
middleend/: Cargo.toml  README.md
slynx/: component.slynx  number_systems.slynx  trailing_float.slynx  tuplas.sly
src/: context.rs  index.ts  lib.rs  main.rs
tests/: arrays.rs  (+27 more)
(+260 files in other folders)
