[package]
name = "slynx"
version = "0.1.0"
edition = "2024"
resolver="2"

[workspace.dependencies]
smallvec = "1.15.1"
color-eyre = "0.6.5"
common = {path="./common"}

[dependencies]
clap={ version = "4.5.52", features = ["derive"] }
color-eyre.workspace=true
common.workspace=true

[workspace]
members = ["crates/*"]
