[package]
name = "slynx"
version = "0.1.0"
edition = "2024"
resolver="2"

[workspace.dependencies]
smallvec = "1.15.1"
color-eyre = "0.6.5"
common = {path="./crates/common"}
petgraph = "0.8.3"
lasso = "0.7.3"
boxcar = "0.2.14"
dashmap = "6.2.1"
parking_lot = "0.12.5"
paste = "1.0.15"
crossbeam-channel = "0.5.15"
ordered-float = "5.3.0"

[dependencies]
clap={ version = "4.5.52", features = ["derive"] }

color-eyre.workspace=true
common.workspace=true
dashmap.workspace=true
paste.workspace = true

slynx-lexer.path="./crates/lexer"
slynx-parser.path="./crates/parser"
slynx-hir.path="./crates/hir"
module_loader.path="./crates/module_loader"
slynx-monomorphizer.path="./crates/monomorphizer"
slynx-ir.path="./crates/ir"
slynx-codegen.path="./crates/codegen"


[workspace]
members = ["crates/*"]
